# OpenCV_Aruco

./: CMakeLists.txt  Makefile  README.md  ellipse.cpp  ellipse.h  main.cpp
ED_Lib/: ArucoDetect.cpp  ArucoDetect.h
